Fix separator spacing.
Try to use a shorter gecko ID.
Make the githubusercontent path permission more specific.

--- a/entrypoints/popup/style.sass
+++ b/entrypoints/popup/style.sass
@@ -303,6 +303,10 @@ ul#list
       &:hover
         text-decoration: underline
 
+    .sep
+      margin: 0 6px
+      font-weight: bold
+
 /* Toggle Switch */
 .switch
   position: relative
